--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>魔多的个人简历</title>
+    <title>赵忠祥的个人简历</title>
     <meta name="theme-color" content="#ffc91d"/>
     <link rel="icon" href="static/img/32.png" sizes="32x32"/>
     <link rel="icon" href="static/img/192.png" sizes="192x192"/>
@@ -30,20 +30,20 @@
             <h2 class="title">个人资料</h2>
             <div class="row">
                 <div class="col-l-4">
-                    <p>姓名：魔多</p>
+                    <p>姓名：赵忠祥</p>
                     <p>性别：男</p>
-                    <p>年龄：48</p>
-                    <p>英文名：Moreduo</p>
-                    <p>学历：博士后</p>
+                    <p>年龄：29</p>
+                    <p>应聘职位：php工程师，php主管，项目经理</p>
+                    <p>学历：本科</p>
                 </div>
                 <div class="col-l-4">
-                    <p>QQ：986482</p>
-                    <p>GitHub：<a href="https://github.com">Moreduo</a></p>
-                    <p>博客：<a href="http://www.wangdahai.cn">http://www.wangdahai.cn</a></p>
-                    <p>邮箱：<a href="mailto:986482@qq.com">986482@qq.com</a></p>
+                    <p>QQ：2806228703</p>
+                    <p>联系电话：18229786406</p>
+                    <p>博客：<a href="https://183072462.github.io/">https://183072462.github.io/</a></p>
+                    <p>邮箱：<a href="mailto:2806228703@qq.com">2806228703@qq.com</a></p>
                 </div>
                 <div class="col-l-4">
-                    <p>我是一个热爱钻研计算机技术的青少年，从小开始对计算机有极大的兴趣。目前我专注网站开发领域。我还自己发起建立了一个制作游戏的团队，希望能和大家合作，一同创造出属于我们自己的原创作品。</p>
+                    <p>我是一个热爱钻研计算机技术的IT男，从小开始对计算机有极大的兴趣。目前我专注php+mysql领域的开发。能独立开发各类网站，系统，接口，微信公众平台，小程序等，希望能和大家合作，一同创造出属于我们自己的原创作品。</p>
                 </div>
             </div>
         </div>
@@ -52,6 +52,15 @@
         <div class="wrap">
             <h2 class="title">掌握的技能</h2>
             <div class="row scrollable">
+            <div class="col-s-6 col-m-4 center-fixed">
+                    <div class="skills-icon">
+                        <i class="fa fa-html5"></i>
+                    </div>
+                    <div class="skills-title">
+                        <h3>php</h3>
+                        <p>熟悉 HTML5 网站的架构和开发</p>
+                    </div>
+                </div>
                 <div class="col-s-6 col-m-4 center-fixed">
                     <div class="skills-icon">
                         <i class="fa fa-html5"></i>
@@ -149,22 +158,18 @@
             <div class="row">
                 <div class="col-m-8">
                     <ul class="timeline">
-                        <li>2016.07.03：创立缤奇（Binkic）团队</li>
-                        <li>2016.12.20：仿照某动漫官网编写模板，并搭建运营了一个动漫型社区</li>
-                        <li>2017.05.30：带领团队进行招新，并发起了首个游戏项目：<a>色块冲刺</a></li>
-                        <li>2017.08.17：为团队制作了首部宣传片：<a href="javascript:;" target="_blank">创意可以改变什么</a></li>
-                        <li>2017.12.08：个人编写的前端响应式框架 <a href="javascript:;" target="_blank">Kico Style</a> 初现雏形</li>
-                        <li>2018.03.01：基于 Kico Style 的第一个原创 <a href="javascript:;" target="_blank">缤奇团队官网</a> 正式上线</li>
-                        <li>2018.04.27：使用前端技术编写的 <a href="javascript:;" target="_blank">梦想晨会</a> 制作完成</li>
-                        <li>2018.06.07：参加“众创杯”创业大赛校园选拔赛，团队项目荣获三等奖</li>
-                        <li>2018.06.17：动漫门户网站制作完成，内含一个自己设计的简单音乐播放器</li>
-                        <li>2018.06.25：参加全国中职信息技术技能大赛微网站项目，荣获一等奖</li>
-                        <li>2018.08.03：原创博客主题 <a href="javascript:;" target="_blank">Single</a> 发布，截至 2 月共有 66 Stars</li>
-                        <li>2018.09.19：个人编写的播放器 <a href="javascript:;" target="_blank">Kico Player</a> 发布测试版</li>
-                        <li>2018.12.12：基于 ES6 的时钟小工具 <a href="javascript:;" target="_blank">Kico Tools</a> 发布测试版</li>
-                        <li>2018.12.18：第一个基于 PHP 的个人首页 <a href="javascript:;" target="_blank">Sweet</a> 发布正式版</li>
-                        <li>2019.01.01：缤奇团队新<a href="javascript:;" target="_blank">官网</a>正式上线，后端采用 Typecho 驱动</li>
-                        <li>2019.02.16：结合前后端制作了一个春节的<a href="javascript:;" target="_blank">问答红包</a>，使用正则判断答案</li>
+                        <li>2012.04：长沙聚丰网络公司担任php程序员，主要开发游戏类官网。</li>
+                        <li>2012.07：开发的官网http://www.96u.com/上线</li>
+                        <li>2012.09：开发的游戏官网http://web.96u.com/上线</li>
+                        <li>2012.12：开发的游戏开服网站http://www.qc6.com/上线</li>
+                        <li>2014.03：湖南畅旅网络科技有限公司担任php程序员,相当于外包企业各类网站,微信公众平台,商城,APP等的开发。</li>
+                         <li>2014.07：长沙旅游网，旅游商城上线。</li>
+                         <li>2014.10：长沙植物园票务系统上线。</li>
+                          <li>2014.03：湖南畅旅网络科技有限公司担任php程序员,相当于外包企业各类网站,微信公众平台,商城,APP等的开发。</li>
+                           <li>2014.03：湖南畅旅网络科技有限公司担任php程序员,相当于外包企业各类网站,微信公众平台,商城,APP等的开发。</li>
+                        <li>2015.12：湖南实意网络担任php组长,开发微信公众平台,商城</a></li>
+                        <li>2017.06：湖南中科博华科技有限公司担任php主管。负责政府oa,大数据系统等的开发</li>
+                        
                     </ul>
                 </div>
                 <div class="col-m-4 center-fixed">
